--- a/yt-api-service/functions/package.json
+++ b/yt-api-service/functions/package.json
@@ -11,10 +11,11 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "18"
+    "node": "22"
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@google-cloud/storage": "^7.14.0",
     "firebase-admin": "^13.0.1",
     "firebase-functions": "^6.1.1"
   },
